# tapeann-benchmark

./: .gitignore  pyproject.toml
.claude/: settings.local.json
DiskANN/include/: ann_exception.h
DiskANN/src/: linux_aligned_file_reader.cpp
bench/: analyze.py  run_bench.py
bench/analyze/: pareto.py  plots.py  promo_plots.py  report.py
bench/configs/: grid.py
bench/prep/: bvecs_to_bins.py  compute_gt.py  download_data.sh  env_capture.sh  preflight.py
bench/results/: aggregated.csv  build_costs.csv  closest_recall.csv  diskann.csv  env.txt  index_sizes.txt  pareto_summary.csv  report.md  runs.csv  summary.md
bench/results/_archive/: index_sizes.txt  tapeann.csv
bench/run/: run_all.py  runner_common.py
sift10m_code/ram_algo_implementation/: README.md  benchmark_search.cpp  export_test.py  graph_true.py  inspect_mat.py  split_dataset.py  tape_writer.py
